--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -3,7 +3,7 @@
   height: 80px;
   align-items: center;
   display: flex;
-  /* background: rgba(000, 000, 000, 0.125); */
+  background: rgba(000, 000, 000, 0.125);
   justify-content: center;
   position: fixed;
   z-index: 1000;
